--- a/woocommerce-products-filter/css/front.css
+++ b/woocommerce-products-filter/css/front.css
@@ -11,6 +11,14 @@
     margin-bottom: 11px !important;
 }
 
+.woof_container label{
+    display: inline-block !important;
+}
+
+ul.woof_list{
+    margin: 0 !important;
+}
+
 .woof_list li{
     list-style: none !important;
     padding: 0 0 5px 0 !important;
@@ -21,11 +29,14 @@
     vertical-align: middle;
     padding-top: 3px;
     padding-bottom: 3px;
+    display: inline-block;
 }
 
 .woof_childs_list{
     margin: 7px 0 0 15px !important;
 }
+
+
 
 /**********************/
 .woof_auto_show{
@@ -35,7 +46,8 @@
 
 .woof_sid_auto_shortcode .woof_container{
     float: left;
-    width: 32%;
+    width: 33%;
+    min-width: 150px;
 }
 
 
@@ -43,7 +55,7 @@
     padding-left: 5px;
 }
 
-.woo_submit_search_form_container{
+.woof_submit_search_form_container{
     overflow: hidden;
     clear: both;
     margin: 9px 0 15px 0;
@@ -53,15 +65,16 @@ li.woof_childs_list_li{
     padding-bottom: 0 !important;
 }
 
-.woof_checkbox_instock_container, .woof_checkbox_sales_container{
-    margin-bottom: 4px;
-}
-
-
-
 /********************/
 div.woof_info_popup {
-    /*-webkit-border-radius: 5px;
+    position: fixed;
+    top: 48%;
+    left: 48%;
+    z-index: 10001;
+    display: none;
+    overflow: hidden;
+    padding: 20px;
+    -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
     background-color: rgba(0,0,0,.6);
@@ -73,80 +86,34 @@ div.woof_info_popup {
         inset 0 0 0 2px rgba(255,255,255,.2);
     box-shadow:
         inset 0 0 0 1px rgba(0,0,0,.6),
-        inset 0 0 0 2px rgba(255,255,255,.2);*/
-    //animation: 1s ease-in-out 0s normal none infinite running spin;
-    //background: rgba(0, 0, 0, 0) url("../img/loader.svg") repeat scroll center center / cover ;
-    background: url("../img/loader.gif") no-repeat scroll center center /cover;
-    color: rgba(0, 0, 0, 0.75);
-    display: none;
-    font-family: "Oswald",sans-serif;
-    font-size: 0;
-    height: 35px;
-    left: 48%;
-    overflow: hidden;
-    padding: 20px;
-    position: fixed;
-    text-indent: -999px;
-    top: 48%;
-    width: 35px;
-    z-index: 10001;
+        inset 0 0 0 2px rgba(255,255,255,.2);
+    color: #fff;
+    font-size: 22px;
+    font-family: 'Oswald',sans-serif;
 }
 
 /*************/
-ul.woof_list_color{
-
-}
-
-ul.woof_list_color li{
-    padding: 0 !important;
-    margin: 3px 3px 0 0 !important;
-    float: left;
-}
-
-.woof_color_term {
-    width: 20px;
-    height: 20px;
-    padding: 0px;
-    /*background: url("../img/color_checkbox.png");*/
-    display: block;
-    clear: left;
-    float: left;
-    border:solid 1px #aaa;
-}
-
-.woof_color_term.checked {
-    /*background-position: 0px -50px;*/
-    background: url("../img/checked4.png");
-}
-
-.woof_color_term.clicked {
-    /*background-position: 0px -25px;*/
-    background: url("../img/checked4.png");
-}
-
-.woof_color_term.clicked.checked {
-    /*background-position: 0px -75px;*/
-    background: url("../img/checked4.png");
-}
-
-.woof_color_term_ffffff .woof_color_term.checked{
-    background: url("../img/checked_for_white.png");
-}
 
 p.woof_tooltip {
     position: relative;
     display: inline;
+    line-height: normal !important;
 }
 p.woof_tooltip span.woof_tooltip_data {
     position: absolute;
-    width:140px;
+    width:auto;
+    min-width: 140px;
+    max-width: 300px;
     color: #FFFFFF;
     background: #000000;
-    height: 30px;
-    line-height: 30px;
+    height: auto;
+    min-height: 19px;
+    line-height: normal;
+    vertical-align: middle;
     text-align: center;
     visibility: hidden;
     border-radius: 6px;
+    margin-top: -30px;
 }
 p.woof_tooltip span.woof_tooltip_data:after {
     /*
@@ -170,46 +137,6 @@ p:hover.woof_tooltip span.woof_tooltip_data {
     z-index: 999;
 }
 
-.woof_title_search_container{
-    margin: 0 0 9px 0;
-}
-
-.woof_title_search_container.woof_container{
-    width: 100%;
-    margin-top: 5px;
-}
-
-.woof_title_search_container input[type='search']{
-    width: 95% !important;
-    padding: 5px !important;
-    margin: 0 !important;
-}
-
-.woof_title_search_container .woof_title_search_go{
-    display: block;
-    width: 20px;
-    height: 20px;
-    background: url("../img/eye-icon2.png");
-    position: absolute;
-    left: 100%;
-    /*margin: -25px 83%;*/
-    display: none;
-    border: none !important;
-    text-decoration: none !important;
-}
-
-.woof_title_search_container .woof_container_inner{
-    width: auto !important;
-}
-
-
-@-moz-document url-prefix() {
-    .woof_title_search_container .woof_title_search_go{
-        /*margin: -25px 95% !important;*/
-    }
-}
-
-
 
 .woof_products_top_panel{
     overflow: hidden;
@@ -217,7 +144,7 @@ p:hover.woof_tooltip span.woof_tooltip_data {
     margin: 5px 0 15px 0;
     display: none;
     position: relative;
-    z-index: 2015;
+    z-index: 99;
 }
 
 .woof_products_top_panel ul{
@@ -227,7 +154,7 @@ p:hover.woof_tooltip span.woof_tooltip_data {
 
 .woof_products_top_panel li{
     float: left;
-    margin: 0 15px 0 0;
+    margin: 0 15px 0 0 !important;
     list-style: none !important;
 }
 
@@ -255,7 +182,7 @@ p:hover.woof_tooltip span.woof_tooltip_data {
 /*****************************************************/
 .woof_sid_auto_shortcode{
     background: #fff;
-/*    border:solid 2px #aaa;
+    border:solid 2px #aaa;
     -webkit-border-radius: 7px;
     -moz-border-radius: 7px;
     border-radius: 7px;
@@ -265,7 +192,7 @@ p:hover.woof_tooltip span.woof_tooltip_data {
     background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9) );
     background:-moz-linear-gradient( center top, #f9f9f9 5%, #e9e9e9 100% );
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9');
-    margin-bottom: 11px;*/
+    margin-bottom: 11px;
     clear: both;
 }
 
@@ -278,23 +205,6 @@ p:hover.woof_tooltip span.woof_tooltip_data {
     margin: 0 0 5px 0 !important;
 }
 
-.woof_sid_auto_shortcode #woof_show_title_search{
-    width: 99% !important;
-}
-
-.woof_sid_auto_shortcode .woof_container_color{   
-    width: 100% !important;
-    clear: both;
-    margin-bottom: 11px;
-}
-
-.woof_sid_auto_shortcode .woof_container_inner_color{
-    padding: 9px;
-    background: #fff;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    border-radius: 7px;
-}
 
 
 .woof_edit_view{
@@ -358,12 +268,12 @@ p:hover.woof_tooltip span.woof_tooltip_data {
     z-index: 999;
 }
 
-.woof_redraw_zone{
+.woof_auto_show .woof_redraw_zone{
     position: relative;
     z-index: 1001;
 }
 
-.woof_price_search_container{
+.woof_auto_show .woof_price_search_container{
     position: relative;
     z-index: 1002;
 }
@@ -377,6 +287,7 @@ p:hover.woof_tooltip span.woof_tooltip_data {
 .woof_childs_list_opener{
     vertical-align: middle;
     margin-left: 4px;
+    display: inline-block !important;
 }
 
 .woof_childs_list_opener span{
@@ -393,7 +304,7 @@ p:hover.woof_tooltip span.woof_tooltip_data {
 }
 
 .woof_childs_list_opener span.woof_is_opened{
-    background: url(../img/minus.png);
+    background: url(../img/minus2.png);
 }
 
 
@@ -570,8 +481,146 @@ p:hover.woof_tooltip span.woof_tooltip_data {
     display: none;
 }
 
-.woof_price_search_container.woof_container {
+.woof_section_scrolled{
+    overflow: auto;
+    overflow-x: hidden;
+    margin-bottom: 3px;
+}
+
+.woof_price_filter_dropdown{
+    width: 100%;
+}
+
+.chosen-results li{
+    margin-left: 0 !important;
+}
+
+.woof-padding-1{
+    padding-left: 12px !important;
+}
+.woof-padding-2{
+    padding-left: 24px !important;
+}
+.woof-padding-3{
+    padding-left: 36px !important;
+}
+.woof-padding-4{
+    padding-left: 48px !important;
+}
+.woof-padding-5{
+    padding-left: 60px !important;
+}
+
+/*******************************/
+
+.chosen-container{
+    margin-bottom: 3px;
+}
+
+.woof_search_is_going nav.woocommerce-breadcrumb+h1.page-title{
     display: none;
+}
+
+.woof_search_is_going nav.woocommerce-breadcrumb{
+    display: none;
+}
+
+.woof_checkbox_label{
+    margin-left: 7px;
+}
+
+.woof_checkbox_label_selected{
+    font-weight: bold;
+}
+
+.woof_radio_label_selected{
+    font-weight: bold;
+}
+
+.woof_checkbox_count{
+    margin-left: 3px;
+}
+
+.woof_radio_label{
+    margin-left: 5px;
+}
+
+.woof_radio_count{
+    margin-left: 2px;
+}
+
+a.woof_front_toggle{
+    float:right;
+}
+
+/*
+a.woof_front_toggle{
+    float:right;
+    text-decoration: none;
+    display: block;
+    padding: 0 3px 0 3px;
+    border: solid 1px #000;
+    border-radius: 20px;
+    line-height: normal !important;
+    text-align: center;
+    vertical-align: middle;
+    min-width: 20px;
+    min-height: 20px;
+}
+
+a.woof_front_toggle:hover{
+    border: solid 1px #bbb;
+}
+
+*/
+
+.woof_closed_block{
+    display: none;
+}
+
+.woof_radio_term_reset_visible{
+    display: inline-block !important;
+}
+
+.woof label{
+    cursor: pointer;
+}
+
+/********************************************/
+
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1200px) {
+
+
+
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+    .woof_sid_auto_shortcode .woof_container{
+        clear: both;
+        width: 100%;
+    }
+
+    .woof_sid_auto_shortcode .woof_container .chosen-container{
+        width: 100% !important;
+    }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 600px) {
+
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+
 }
 
 
